*
* 2.2.3
*

- Additional information about captured Windows Event Log event passed to the server
- Fixed issues:
	NX-1258 (Option to pass event data from Windows event log to NetXMS event)
	NX-1389 (If library script saved with compilation errors it disappears from script list)


*
* 2.2.2
* 

- Server command line tools working with agents (nxaction, nxap, nxget, nxupload) use encryption by default
- "Floor plan" display mode for objects on network map
- Access to zone data in network discovery filters 
- Automatic target configuration in PING subagent
- Implemented option to display object status map in radial form
- Fixed issues:
	NX-513 (add toString() to all data objects in netxms-base)
	NX-599 (Delete single collected value from a DCI)
	NX-669 (DRBD monitoring is not working in some configurations)
	NX-689 (Pass found SNMP configuration while discovery for new node creation)
	NX-890 (Passive elements in rack)
	NX-1169 (Encryption is not set by default between agent and server)
	NX-1297 (Copying Files inside File Manager using CTRL and Drag&Drop is not working)
	NX-1299 (Add username filter to CountEx(*) and Process.XXX(*) parameters in Linux subagent)
	NX-1306 (Show system FQDN in tunnel manager)
	NX-1350 (Invert Values option for performance tab DCIs; Performance tab graph configuration is maintained on double-click)
	NX-1366 (Edit option for "group box" decorations on network maps)
	NX-1369 (Title not displayed for dashboard element "Rack")
	NX-1370 (Rack page not displayed correctly when switch between rack objects)
	NX-1372 (PING subagent is not working)
	NX-1374 (Element DashboardGroup not displayed in Dashboard perspective)
	NX-1373 (Error message "Error loading RSA keys from ..." in all server-to-agent command line tools)
	NX-1375 (Add functionality to switch off multipliers for graphs)
	NX-1376 (Windows agent reports incorrect OS version on Windows 10)
	NX-1379 (Rack width calculated incorrectly if only front/back selected)